# It will contain a list of the changes that apply to quickstart.html to facilitate an easier upgrade process on custom apps.
# Items indicated with an asterisk indiciate a feature or enhancement that may not directly impact quickstart.html, but deserves attention.
#

Any time you are upgrading to a new version of the MVC, you should create a new branch.

201332
ADMIN
 -> new domain config interface
 -> fixes to variations
 -> fixes to handling and insurance
 -> fixes to shipping rules
 -> fixes to flexedit manager
 -> fixes to flexedit in product
 -> fixes to campaigns
 -> 'choose domain' dialog will only show favorites IF favorites are configured.
 -> new 'images' panel in product editor.
 -> new eBay Item Specifics form (with @RECOMMENDATIONS). Old XSLT piece not used any more.


301330
ADMIN
 -> new options in customer search (schedule, account manager and account type)
 -> new options in organization search (schedule, account type)
 -> new interface for price schedules
 -> everywhere schedule is referenced in the UI got updated (syndication, organizations, etc)
 -> new interface for account utilities (that interface formerly known as tech tools)
 	disk usage and inventory event queue are in the 'logs' section.
 -> "Inventory Lookup" in utilities moved to 'vstore' in setup.
 -> new interface for vendors
 -> new flexedit manager interface in utilities
 -> flexedit panel in product editor upgraded to full app
 -> fixed bugs in powertool


301324
popCheckbox and popRadio are retired. popVal will now handle all input types. all files were updated.
 -> https://github.com/zoovy/AnyCommerce-Development/commit/877a5a382f629150aedfcaa9087b0f37d1667a92
 -> https://github.com/zoovy/AnyCommerce-Development/commit/a6c2fbff7ad08c077842e38100c2dbe7dfc93f6f



201314
jquery.showloading-v1.0.jt must be in pass 0 of rq in init file.
invoiceContainer template changed.